[project]
name = "Faunanet"
version = "0.1"
requires-python = ">= 3.9"
authors=[{name = "Inga Ulusoy", email = "inga.ulusoy@uni-heidelberg.de"}, {name = "Harald Mack", email = "harald.mack@uni-heidelberg.de"}]
description = "Faunanet - A bioacoustics platform for the analysis of animal sounds based on birdnetlib"
readme ="README.md"
license={file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache License",
    "Development Status :: 4 - Beta",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence", 
]
dependencies = [
    "numpy", 
    "librosa", 
    "PyYAML", 
    "birdnetlib==0.15.0",
    "pooch", 
    "resampy", # for audio loading
    "platformdirs", # get cache dirs without os dependence etc
    "ffmpeg-python"
]

[project.optional-dependencies]
tensorflow   = ["tensorflow"]
tensorflow-lite =["tflite-runtime"]
dev = [
    "pytest", 
    "pytest-cov", 
    "coverage", 
    "pre-commit", 
    "pytest-mock", 
    "pandas", 
    "sphinx-rtd-theme"
]
doc = [
    "sphinx",
    "sphinx",
    "myst-parser",
    "sphinxcontrib-napoleon",
    "sphinx-rtd-theme"

]

[project.urls]
Repository = "https://github.com/ssciwr/iSparrow"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Tools 
[tool.pytest.ini_options]
minversion = "6.0"
addopts="-v -x"
testpaths = ["tests"] 

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["./src/faunanet"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]
fail_under = 80

[tool.coverage.html]
directory = "coverage_html_report"

[project.scripts]
faunanet = "faunanet.repl:run"